--- a/newsletter/style.css
+++ b/newsletter/style.css
@@ -14,7 +14,6 @@
     height: 450px;
     text-align: center;
     color: #1E407A;
-    height: 55vh;
 }
 
 .newscontent h1 {
@@ -42,18 +41,6 @@
     border: 1px solid #F15B39;
     border-radius: 0 12px 12px 0;
     margin-left: -5px;
-}
-
-.footer {
-    position: absolute;
-    width: 100%;
-    bottom: 59px;
-}
-
-.subFooter {
-    position: absolute;
-    width: 100%;
-    bottom: 0px;
 }
 
 @media screen and (max-width: 576px) {
