--- a/webshop/style.css
+++ b/webshop/style.css
@@ -3,7 +3,6 @@
     grid-template-columns: inherit;
     background-color: #1E407A;
     grid-column: 1/7;
-    height: 78vh;
 }
 
 .maincontent {
